Turn off doc building on dronie for now -- all screwy since we are in flux

--- a/.drone-1.0.yml
+++ b/.drone-1.0.yml
@@ -23,10 +23,10 @@ steps:
     image: *test-image
     commands:
       - CXXFLAGS="-O0" make check V=0
-  - name: docs
-    image: *test-image
-    commands:
-      - make doxygen-checked
+  # - name: docs
+  #   image: *test-image
+  #   commands:
+  #     - make doxygen-checked
   # - name: valgrindcheck
   #   image: *test-image
   #   commands:
