--- a/src/geom/Makefile.am
+++ b/src/geom/Makefile.am
@@ -22,6 +22,7 @@ libgeom_la_SOURCES = \
     GeometryCollection.cpp \
     GeometryComponentFilter.cpp \
     GeometryFactory.cpp \
+    HeuristicOverlay.cpp \
     IntersectionMatrix.cpp \
     LinearRing.cpp \
     LineSegment.cpp \
