When called without options, use OverlayNG for CAPI GEOSGeom_setPrecision

--- a/tests/unit/Makefile.am
+++ b/tests/unit/Makefile.am
@@ -25,6 +25,7 @@ EXTRA_DIST = \
 	tut/tut_runner.hpp \
 	tut/tut_xml_reporter.hpp \
 	util/NodingTestUtil.h \
+	capi/capi_test_utils.h \
 	CMakeLists.txt
 
 
