Rename OverlayNGSnapIfNeeded to OverlayNGRobust, https://github.com/dr-jts/jts/commit/c1277b0658868bf49db0f9583255eebed7d0a757

--- a/include/geos/operation/overlayng/Makefile.am
+++ b/include/geos/operation/overlayng/Makefile.am
@@ -27,7 +27,7 @@ geos_HEADERS = \
     OverlayMixedPoints.h \
     OverlayPoints.h \
     OverlayNG.h \
-    OverlayNGSnapIfNeeded.h \
+    OverlayNGRobust.h \
     OverlayUtil.h \
     PolygonBuilder.h \
     PrecisionReducer.h \
