--- a/src/operation/overlayng/Makefile.am
+++ b/src/operation/overlayng/Makefile.am
@@ -26,7 +26,7 @@ libopoverlayng_la_SOURCES = \
     OverlayMixedPoints.cpp \
     OverlayPoints.cpp \
     OverlayNG.cpp \
-    OverlayNGSnapIfNeeded.cpp \
+    OverlayNGRobust.cpp \
     OverlayUtil.cpp \
     PolygonBuilder.cpp \
     PrecisionReducer.cpp \
