Fix OverlayNGRobust self-snapping to prevent heterogeneous results
 * Add explicit check for hetero overlay input
 * Fix to prevent hetero results from self-snapping
 * Include test case

Closes #1062
This is a port of https://github.com/locationtech/jts/pull/618

--- a/tests/xmltester/Makefile.am
+++ b/tests/xmltester/Makefile.am
@@ -135,6 +135,7 @@ SAFE_XMLTESTS= \
 	$(srcdir)/tests/robust/overlay/TestOverlay-qgis-29400.xml \
 	$(srcdir)/tests/robust/overlay/TestOverlay-qgis-31552.xml \
 	$(srcdir)/tests/robust/overlay/TestOverlay-qgis-37032.xml \
+	$(srcdir)/tests/robust/overlay/TestOverlay-rsf-794.xml \
 	$(srcdir)/tests/robust/overlay/TestOverlay-shapely-829.xml \
 	$(srcdir)/tests/robust/overlay/TestOverlay-stmlf.xml \
 	$(srcdir)/tests/issue/issue-geos-176.xml \
