--- a/src/geom/prep/Makefile.am
+++ b/src/geom/prep/Makefile.am
@@ -1,14 +1,14 @@
 #
-# This file is part of project GEOS (http://trac.osgeo.org/geos/) 
+# This file is part of project GEOS (http://trac.osgeo.org/geos/)
 #
 noinst_LTLIBRARIES = libgeomprep.la
 
-AM_CPPFLAGS = -I$(top_srcdir)/include 
+AM_CPPFLAGS = -I$(top_srcdir)/include
 
 ## these are full inlined
-# PolygonExtracter.cpp 
-# PointExtracter.cpp 
-# LinearComponentExtracter.cpp 
+# PolygonExtracter.cpp
+# PointExtracter.cpp
+# LinearComponentExtracter.cpp
 
 libgeomprep_la_SOURCES = \
     AbstractPreparedPolygonContains.cpp \
@@ -16,7 +16,9 @@ libgeomprep_la_SOURCES = \
     PreparedGeometry.cpp \
     PreparedGeometryFactory.cpp \
     PreparedLineString.cpp \
+    PreparedLineStringDistance.cpp \
     PreparedLineStringIntersects.cpp \
+    PreparedLineStringNearestPoints.cpp \
     PreparedPoint.cpp \
     PreparedPolygonContains.cpp \
     PreparedPolygonContainsProperly.cpp \
