Put prepared polygon distance in its own class

--- a/include/geos/geom/prep/Makefile.am
+++ b/include/geos/geom/prep/Makefile.am
@@ -20,6 +20,7 @@ geos_HEADERS = \
     PreparedPolygonContains.h \
     PreparedPolygonContainsProperly.h \
     PreparedPolygonCovers.h \
+    PreparedPolygonDistance.h \
     PreparedPolygon.h \
     PreparedPolygonIntersects.h \
     PreparedPolygonPredicate.h
