Add nearestNeighbor() to the SimpleSTRtree implementation as well as isWithinDistance(). Refactor classes a little to put all the distance related calculations and classes in SimpleSTRdistance instead of in the tree class, for a cleaner tree. Add some tests to the unit test, but only enough to check that it turns over and returns minimally sensible results.

--- a/include/geos/index/strtree/Makefile.am
+++ b/include/geos/index/strtree/Makefile.am
@@ -20,4 +20,5 @@ geos_HEADERS = \
     SIRtree.h \
     STRtree.h \
     SimpleSTRtree.h \
-    SimpleSTRnode.h
+    SimpleSTRnode.h \
+    SimpleSTRdistance.h
