--- a/src/index/strtree/Makefile.am
+++ b/src/index/strtree/Makefile.am
@@ -14,6 +14,7 @@ libindexstrtree_la_SOURCES = \
     SIRtree.cpp \
     STRtree.cpp \
     SimpleSTRtree.cpp \
-    SimpleSTRnode.cpp
+    SimpleSTRnode.cpp \
+    SimpleSTRdistance.cpp
 
 libindexstrtree_la_LIBADD =
