Port ElevationModel class from JTS
Closes #1070

Differences from JTS:
  - Cells are all initialized upfront, no heap allocations
  - CoordinateSequence::hasZ implemented as non-virtual
  - ElevationModel::populateZ uses CoordinateFilter instead
    of CoordinateSequenceFilter (see note 1)

Note1:
  Using CoordinateFilter instead of CoordinateSequenceFilter
  allows CoordinateSequence to clear the dimension cache which
  would otherwise not properly set the sequence as having Z
  (see #435)

--- a/include/geos/operation/overlayng/Makefile.am
+++ b/include/geos/operation/overlayng/Makefile.am
@@ -13,6 +13,7 @@ geos_HEADERS = \
     EdgeMerger.h \
     EdgeNodingBuilder.h \
     EdgeSourceInfo.h \
+    ElevationModel.h \
     IndexedPointOnLineLocator.h \
     InputGeometry.h \
     IntersectionPointBuilder.h \
