--- a/tests/xmltester/Makefile.am
+++ b/tests/xmltester/Makefile.am
@@ -166,6 +166,7 @@ SAFE_XMLTESTS= \
 	$(srcdir)/tests/issue/issue-geos-990.xml \
 	$(srcdir)/tests/issue/issue-geos-994.xml \
 	$(srcdir)/tests/issue/issue-geos-1018.xml \
+	$(srcdir)/tests/issue/issue-geos-1046.xml \
 	$(srcdir)/tests/validate/TestRelateAA-big.xml \
 	$(srcdir)/tests/validate/TestRelateAA.xml \
 	$(srcdir)/tests/validate/TestRelateAC.xml \
