TST/CI: Add post-install tests for CMake, pkg-config, and geos-config

--- a/.travis.yml
+++ b/.travis.yml
@@ -155,6 +155,7 @@ before_install:
   - eval "${E}"
   - export CXXFLAGS=${ARCH}
   - export CFLAGS=${ARCH}
+  - export LDFLAGS=${ARCH}
   - export GEOS_BUILD_TOOL=${TOOL}
   - export BUILD_TYPE=${BUILD_TYPE}
   - export CXX="ccache ${CXX}"
