--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,20 +94,27 @@ jobs:
         then
           mkdir build.cmake
           cd build.cmake
+          GEOS_INSTALL=/tmp/geos.cmake
           cmake --version
-          cmake -DCMAKE_CXX_COMPILER=${{ matrix.ci.compiler }} -DCMAKE_CXX_STANDARD=${{ matrix.ci.cxxstd }} -DBUILD_DOCUMENTATION=YES -DCMAKE_BUILD_TYPE=$BUILD_TYPE ..
+          cmake -DCMAKE_CXX_COMPILER=${{ matrix.ci.compiler }} -DCMAKE_CXX_STANDARD=${{ matrix.ci.cxxstd }} -DBUILD_DOCUMENTATION=YES -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DCMAKE_INSTALL_PREFIX=$GEOS_INSTALL ..
           make
           cmake --build . --target docs
           ctest --output-on-failure .
+          make install
+          ../tests/postinstall/test_cmake.sh $GEOS_INSTALL
+          ../tests/postinstall/test_pkg-config.sh $GEOS_INSTALL
+          ../tests/postinstall/test_geos-config.sh $GEOS_INSTALL
         else
-          set -e
           ./autogen.sh
           mkdir build.autotools
           cd build.autotools
-          CFLAGS="-std=c++${{ matrix.ci.cxxstd }} -m${{ matrix.ci.arch }}"
-          ../configure CC=${{ matrix.ci.compiler }} CXX=${{ matrix.ci.compiler }} CXXFLAGS="$CFLAGS" CFLAGS="$CFLAGS"
+          GEOS_INSTALL=/tmp/geos.autotools
+          export CFLAGS=-m${{ matrix.ci.arch }}
+          export CXXFLAGS="-std=c++${{ matrix.ci.cxxstd }} -m${{ matrix.ci.arch }}"
+          export LDFLAGS=-m${{ matrix.ci.arch }}
+          ../configure CC=${{ matrix.ci.compiler }} CXX=${{ matrix.ci.compiler }} --prefix=$GEOS_INSTALL
           make && make check && make distcheck
+          make install
+          ../tests/postinstall/test_pkg-config.sh $GEOS_INSTALL
+          ../tests/postinstall/test_geos-config.sh $GEOS_INSTALL
         fi
-
-
-
