Fix crash on relating geoms with empty components
Closes #1085 in 3.6 branch (3.6.4dev)
Includes tests

--- a/tests/xmltester/Makefile.am
+++ b/tests/xmltester/Makefile.am
@@ -45,6 +45,7 @@ SAFE_XMLTESTS=$(srcdir)/tests/testLeaksBig.xml \
 	$(srcdir)/tests/ticket/bug716.xml \
 	$(srcdir)/tests/ticket/bug837.xml \
 	$(srcdir)/tests/ticket/bug838.xml \
+	$(srcdir)/tests/ticket/bug1085.xml \
 	$(srcdir)/tests/general/TestBoundary.xml \
 	$(srcdir)/tests/general/TestBuffer.xml \
 	$(srcdir)/tests/general/TestBufferMitredJoin.xml \
