--- a/configure.ac
+++ b/configure.ac
@@ -15,7 +15,7 @@ JTS_PORT=1.13.0
 
 dnl -- Version info for the CAPI
 CAPI_INTERFACE_CURRENT=11
-CAPI_INTERFACE_REVISION=5
+CAPI_INTERFACE_REVISION=6
 CAPI_INTERFACE_AGE=10
 
 dnl
@@ -24,7 +24,7 @@ dnl -- encoding ABI break at every release
 dnl
 VERSION_MAJOR=3
 VERSION_MINOR=6
-VERSION_PATCH=5
+VERSION_PATCH=6dev
 VERSION="$VERSION_MAJOR.$VERSION_MINOR.$VERSION_PATCH"
 
 dnl CAPI_VERSION_MAJOR=$(($CAPI_INTERFACE_CURRENT-$CAPI_INTERFACE_AGE))
