Make Quadrant an enum class

--- a/include/geos/geom/Makefile.am
+++ b/include/geos/geom/Makefile.am
@@ -50,5 +50,6 @@ geos_HEADERS = \
     PrecisionModel.h \
     PrecisionModel.inl \
     Quadrant.h \
-    Quadrant.inl \
+    Quadrants.h \
+    Quadrants.inl \
     Triangle.h
