--- a/include/geos/algorithm/Makefile.am
+++ b/include/geos/algorithm/Makefile.am
@@ -27,6 +27,7 @@ geos_HEADERS = \
 	Intersection.h \
 	Length.h \
 	LineIntersector.h \
+	LineIntersector.inl \
 	MinimumBoundingCircle.h \
 	MinimumDiameter.h \
 	NotRepresentableException.h \
