Another autotools fix

--- a/include/geos/noding/Makefile.am
+++ b/include/geos/noding/Makefile.am
@@ -41,4 +41,5 @@ geos_HEADERS = \
 	SimpleNoder.h \
 	SinglePassNoder.h \
 	NodingIntersectionFinder.h \
+	NodingIntersectionFinder.inl \
 	ValidatingNoder.h
