Clean up Win32 memory issue, references #1050

--- a/tests/unit/Makefile.am
+++ b/tests/unit/Makefile.am
@@ -78,6 +78,8 @@ geos_unit_SOURCES = \
 	capi/GEOSEqualsTest.cpp \
 	capi/GEOSFrechetDistanceTest.cpp \
 	capi/GEOSGeom_createCollectionTest.cpp \
+	capi/GEOSGeom_createPolygonTest.cpp \
+	capi/GEOSGeom_createLineStringTest.cpp \
 	capi/GEOSGeom_createTest.cpp \
 	capi/GEOSGeom_extentTest.cpp \
 	capi/GEOSGeom_extractUniquePointsTest.cpp \
