Inline CGAlgorithmsDD::orientationIndexFilter

--- a/include/geos/algorithm/Makefile.am
+++ b/include/geos/algorithm/Makefile.am
@@ -15,6 +15,7 @@ geos_HEADERS = \
 	Area.h \
 	BoundaryNodeRule.h \
 	CGAlgorithmsDD.h \
+	CGAlgorithmsDD.inl \
 	CentralEndpointIntersector.h \
 	Centroid.h \
 	ConvexHull.h \
