--- a/src/deps/ryu/Makefile.am
+++ b/src/deps/ryu/Makefile.am
@@ -10,4 +10,10 @@ AM_CPPFLAGS = -I$(top_srcdir)/src/deps
 libryu_la_SOURCES = \
     d2s.c
 
-
+noinst_HEADERS = \
+    common.h \
+    d2fixed_full_table.h \
+    d2s_full_table.h \
+    d2s_intrinsics.h \
+    digit_table.h \
+    ryu.h
